--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
@@ -29,6 +29,7 @@
                             x:Name="MainPicture"
                             Grid.RowSpan="2"
                             Aspect="AspectFill"
+                            BackgroundColor="White"
                             HeightRequest="290"
                             HorizontalOptions="Fill"
                             Source="{Binding AppStimmer.Picture, Converter={StaticResource AppStimmerAttachmentsToMainPictureConverter}}"
