--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerEditorPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerEditorPage.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pages:PopupPage
+<ContentPage
     x:Class="MSO.StimmApp.Views.Pages.AppStimmerEditorPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -8,11 +8,10 @@
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView"
     Title="{Binding IsEditable, Converter={StaticResource AppStimmerEditorEditableToTitleConverter}}"
-    BackgroundColor="Black"
     BindingContext="{Binding AppStimmerEditor, Source={StaticResource Locator}}"
-    HasSystemPadding="True">
+    NavigationPage.HasNavigationBar="False">
     <Grid>
         <!--<appStimmerEditor:AppStimmerEditorTabbedView IsVisible="{Binding IsEditable}" />-->
         <appStimmerEditor:AppStimmerEditorDetailsView_2 />
     </Grid>
-</pages:PopupPage>
+</ContentPage>
