--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmersPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmersPage.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pages:PopupPage
+<ContentPage
     x:Class="MSO.StimmApp.Views.Pages.AppStimmersPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -8,8 +8,7 @@
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     BackgroundColor="Black"
-    BindingContext="{Binding AppStimmers, Source={StaticResource Locator}}"
-    HasSystemPadding="True">
+    BindingContext="{Binding AppStimmers, Source={StaticResource Locator}}">
     <ContentPage.Content>
         <Grid BackgroundColor="White">
             <StackLayout>
@@ -87,7 +86,7 @@
                 </xForms:SfListView>
             </StackLayout>
 
-            <Frame
+            <!--<Frame
                 x:Name="TopBarGradientFrame"
                 Grid.Row="0"
                 Padding="0"
@@ -112,8 +111,8 @@
                         Text="AppStimmer-Übersicht"
                         TextColor="White" />
                 </StackLayout>
-            </Frame>
+            </Frame>-->
         </Grid>
 
     </ContentPage.Content>
-</pages:PopupPage>
+</ContentPage>
