--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/PictureAttachmentPreviewPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/PictureAttachmentPreviewPage.xaml
@@ -13,7 +13,11 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <forms:CachedImage Aspect="AspectFill" Source="{Binding Attachment.AttachmentSource, Converter={StaticResource ImageSourceToImageConverter}}" />
+        <forms:CachedImage
+            Aspect="AspectFill"
+            DownsampleHeight="600"
+            DownsampleWidth="600"
+            Source="{Binding Attachment.AttachmentSource, Converter={StaticResource ImageSourceToImageConverter}}" />
         <Grid
             Grid.Row="0"
             Grid.RowSpan="2"
