--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowImageAttachmentPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowImageAttachmentPage.xaml
@@ -24,7 +24,11 @@
                 Grid.Row="0"
                 Grid.RowSpan="2">
                 <elements:PinchToZoomContainer.Content>
-                    <forms:CachedImage Aspect="AspectFill" Source="{Binding AttachmentSource, Converter={StaticResource ImageSourceToImageConverter}}" />
+                    <forms:CachedImage
+                        Aspect="AspectFill"
+                        DownsampleHeight="600"
+                        DownsampleWidth="600"
+                        Source="{Binding AttachmentSource, Converter={StaticResource ImageSourceToImageConverter}}" />
                 </elements:PinchToZoomContainer.Content>
             </elements:PinchToZoomContainer>
 
