--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/MapsContentPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/MapsContentPage.xaml
@@ -3,11 +3,9 @@
     x:Class="MSO.StimmApp.Views.Pages.MapsContentPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:customMap="clr-namespace:TK.CustomMap;assembly=TK.CustomMap"
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup">
-    <!--<StackLayout VerticalOptions="StartAndExpand" Padding="30">
-        <maps:Map WidthRequest="320" HeightRequest="200"
-                  x:Name="MyMap"
-                  IsShowingUser="true"
-                  MapType="Hybrid"/>
-    </StackLayout>-->
+    <!--<pages:PopupPage.Content>
+        <customMap:TKCustomMap x:Name="MyMap" />
+    </pages:PopupPage.Content>-->
 </pages:PopupPage>
