--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
@@ -194,7 +194,7 @@
                                             HeightRequest="65"
                                             HorizontalOptions="Center"
                                             Source="resource://MSO.StimmApp.Resources.Icons.plus_circle.svg"
-                                            TintColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryColor}"
+                                            TintColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SecondaryColor}"
                                             VerticalOptions="Center"
                                             WidthRequest="65" />
                                     </Grid>
@@ -266,7 +266,7 @@
                 x:Name="TopBarGradientFrame"
                 Grid.Row="0"
                 Padding="0"
-                BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryColor}"
+                BackgroundColor="{Binding NavigationBarBackgroundColor}"
                 EndColor="#00000000"
                 HeightRequest="57"
                 OutlineColor="Transparent"
@@ -304,7 +304,7 @@
             <Label
                 x:Name="SubmitButton"
                 Margin="0,17,20,0"
-                BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryColor}"
+                BackgroundColor="Transparent"
                 FontAttributes="Bold"
                 HeightRequest="20"
                 HorizontalOptions="End"
