--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
@@ -55,6 +55,7 @@
             <converter:StringToPlaceholderOpacityConverter x:Key="StringToPlaceholderOpacityConverter" />
             <converter:AppStimmerAttachmentsToMediaAttachmentsConverter x:Key="AppStimmerAttachmentsToMediaAttachmentsConverter" />
             <converter:StringToPlaceholderConverter x:Key="StringToPlaceholderConverter" />
+            <converter:MediaAttachmentCountToViewVisibilityConverter x:Key="MediaAttachmentCountToViewVisibilityConverter" />
             <converter:ColorToDarkerColorConverter x:Key="ColorToDarkerColorConverter" />
             <converter:AppStimmerToNavigationBarEditPenVisibilityConverter x:Key="AppStimmerToNavigationBarEditPenVisibilityConverter" />
             <converter:AppStimmerAttachmentsToMediaAddachmentCountConverter x:Key="AppStimmerAttachmentsToMediaAddachmentCountConverter" />
