--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView_2.xaml
@@ -323,6 +323,7 @@
                 HorizontalOptions="End"
                 IsVisible="{Binding IsEditable}"
                 Text="SPEICHERN"
+                TextColor="White"
                 VerticalOptions="Start">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding SaveAppStimmerCommand}" />
