--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/CurrentUserView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/CurrentUserView.xaml
@@ -6,39 +6,49 @@
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     BindingContext="{Binding CurrentUser, Source={StaticResource Locator}}">
     <ContentView.Content>
-        <Grid BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SecondaryColor}" HeightRequest="200">
+        <Grid BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SecondaryColor}" HeightRequest="160">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50" />
+                <ColumnDefinition Width="150" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="25" />
-                <RowDefinition Height="25" />
+                <RowDefinition Height="75" />
+                <RowDefinition Height="75" />
             </Grid.RowDefinitions>
-
-            <Image
-                x:Name="ProfilePicture"
+            <Frame
                 Grid.Row="0"
                 Grid.RowSpan="2"
                 Grid.Column="0"
-                Margin="6,6,6,6"
-                Aspect="AspectFill"
-                Source="{Binding User.ProfilePicture, Converter={StaticResource ImageSourceConverter}}" />
+                Margin="10,10,10,10"
+                Padding="3"
+                BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PageBackgroundColor}"
+                CornerRadius="5"
+                OutlineColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PageBackgroundColor}">
+                <Image
+                    x:Name="ProfilePicture"
+                    Aspect="AspectFill"
+                    Source="{Binding User.ProfilePicture, Converter={StaticResource ImageSourceConverter}}" />
+            </Frame>
+
 
             <Label
                 Grid.Row="0"
                 Grid.Column="1"
-                FontSize="11"
+                Font="Bold"
+                FontSize="12"
                 Style="{DynamicResource SubtitleStyle}"
                 Text="{Binding User.Username}"
-                TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.TextOnSecondaryColor}" />
+                TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.TextOnSecondaryColor}"
+                VerticalTextAlignment="End" />
             <Label
                 Grid.Row="1"
                 Grid.Column="1"
-                FontSize="11"
+                Font="Bold"
+                FontSize="12"
                 Style="{DynamicResource SubtitleStyle}"
                 Text="{Binding User.MailAddress}"
-                TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.TextOnSecondaryColor}" />
+                TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.TextOnSecondaryColor}"
+                VerticalTextAlignment="Start" />
         </Grid>
     </ContentView.Content>
 </ContentView>
